[MIN] fix color input on safari phone

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ header .list-link a:hover {
 	border-color: var(--main-bg-color);
 	padding: 14px 20px;
 	font-weight: 700;
+	background-color: transparent;
 }
 .form-container .fa-location-dot {
 	color: black;
@@ -325,7 +326,7 @@ footer .list-link li {
 	}
 
 	.hebergements-cards {
-        margin-top: 30px;
+		margin-top: 30px;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: repeat(2, 1fr);
